<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.SearchFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <TextView
            android:id="@+id/search_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/search_instructions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/search_error"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:textColor="@android:color/holo_orange_dark"
            android:text="@string/could_not_find_the_team_please_try_different_team"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/search_instruction"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/search_error2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:text="@string/could_not_load_the_search_please_try_again_or_visit_latter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/search_instruction"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/search_input"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            app:layout_constraintTop_toBottomOf="@id/search_instruction"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/search_hint"
            app:layout_constraintStart_toStartOf="parent"
            />
        <Button
            android:id="@+id/search_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:text="@string/search"
            app:layout_constraintTop_toBottomOf="@id/search_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>